# xArm5-translocation

./: .gitignore  API_REFERENCE.md  FEATURES.md  LICENSE  README.md  SIMULATION_TESTING.md  pyproject.toml  pytest.ini
docs/: API_REFERENCE.md  FEATURES.md  SIMULATION_TESTING.md  TESTING.md  TESTING_WITH_DOCKER.md  XARM_FEATURES.md
examples/: demo_5joints.py  demo_docker_sim.py  demo_gripper.py  docker_simulation_example.py  plate_cnc_to_handshake.py  plate_cnc_to_table.py  plate_to_cnc.py
settings/: biogripper_config.yaml  connection.yaml  linear_track_config.yaml  location_config.yaml  xarm5_biogripper.yaml  xarm5_config.yaml  xarm_config.yaml
src/: PyxArm.py  xArm5.py  xarm_api_server.py  xarm_controller.py
src/app/: main.py
src/app/templates/: index.html
src/cli/: __init__.py  main.py
src/core/: xarm_api_server.py  xarm_controller.py  xarm_utils.py
src/docs/: PYXARM_API.md  PYXARM_FEATURES.md  PYXARM_TESTING.md
src/examples/: demo_5joints.py  demo_close_HPLC_draw.py  demo_docker_sim.py  demo_force_torque.py  demo_linear_motor.py  demo_open_HPLC_draw.py  demo_software_sim.py
src/settings/: README_SIMULATION.md  force_torque_config.yaml  gripper_config.yaml  linear_track_config.yaml  location_config.yaml  position_config.yaml  safety.yaml  xarm_config.yaml
src/web/: index.html  main.js  server.py  style.css
test/: __init__.py  conftest.py  test_docker_integration.py  test_force_torque.py  test_with_docker.py  test_xarm_api_server.py  test_xarm_controller.py
tests/: conftest.py  demo_xArm5_Biogripper_20250108.py  test_docker_integration.py  test_xarm_controller.py
users/: docker_setup.sh
users/docker/: README.md  docker_setup.sh
users/examples/: demo_5joints.py  demo_docker_sim.py  demo_gripper.py  demo_linear_motor.py  demo_software_sim.py  docker_simulation_example.py  gripper_test.py  joint_testing_demo.py  linear_motor_demo.py
users/settings/: README_SIMULATION.md  bio_gripper_config.yaml  location_config.yaml  xarm5_config.yaml
