[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xarm-translocation"
version = "0.0.2"
authors = [
  { name="Yang Cao", email="cyrilcaoyang@gmail.com" },
]
description = "A package for xArm translocation"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "xarm-python-sdk",
    "PyYAML",
    "flask"
]

